# ProjectWeek2018

./: README.md
CodeSnippets/: TrimCenterline.py
SampleData/: ArteryModel1.vtk  ArterySegmentation1.seg.nrrd
TestingExtension/: CMakeLists.txt
TestingExtension/CenterlineFromSurface/: CMakeLists.txt  CenterlineFromSurface.py
TestingExtension/SurfaceModel/: CMakeLists.txt  SurfaceModel.py
oldSlicerVMTKWork/slicervmtklvlst/: source
oldSlicerVMTKWork/slicervmtklvlst/VMTKEasyLevelSetSegmentation/: presets.xml
oldSlicerVMTKWork/slicervmtklvlst/VMTKLevelSetSegmentation/: SlicerVMTKLevelSetContainer.py
oldSlicerVMTKWork/slicervmtklvlst/VMTKVesselEnhancement/: presets.xml
oldSlicerVMTKWork/slicervmtklvlst/VmtkSlicerModule/: CMakeLists.txt  VmtkSlicerModule.s3ext.txt  VmtkSlicerModule.xml  vtkVmtkSlicerModule.h  vtkVmtkSlicerModuleLogic.cxx  vtkVmtkSlicerModuleLogic.h  vtkVmtkSlicerModuleWin32Header.h
